disable yarn bin

--- a/chains/node-env/config.yaml
+++ b/chains/node-env/config.yaml
@@ -13,8 +13,8 @@ tools:
     evalCommand: fnm env --use-on-cd
   yarn:
     brew: true
-    addToPath:
-      - ~/.yarn/bin
+    # addToPath:
+    #   - ~/.yarn/bin
 toolDeps:
   - nvm
   - fnm
