--- a/chains/go-env/config.yaml
+++ b/chains/go-env/config.yaml
@@ -14,15 +14,15 @@ tools:
   mercurial:
     checkCommand: hg
     brew: true
-  gvm:
-    checkPath: README.md
-    git:
-      url: https://github.com/moovweb/gvm.git
-      target: ~/.gvm
-    postInstall: mv "$HOME/.gvm/.git" "$HOME/.gvm/git.bak"
-    setEnv:
-      GVM_ROOT: target
-    sourceScript: scripts/gvm-default
+  # gvm:
+  #   checkPath: README.md
+  #   git:
+  #     url: https://github.com/moovweb/gvm.git
+  #     target: ~/.gvm
+  #   postInstall: mv "$HOME/.gvm/.git" "$HOME/.gvm/git.bak"
+  #   setEnv:
+  #     GVM_ROOT: target
+  #   sourceScript: scripts/gvm-default
   golangci-lint:
     brew: true
 toolDeps:
@@ -30,4 +30,4 @@ toolDeps:
   - golangci-lint
   - bison
   - mercurial
-  - gvm
+  # -   
